--- a/server-portal/docker-compose.yml
+++ b/server-portal/docker-compose.yml
@@ -1,6 +1,5 @@
-
 services:
-  server-portal-:
+  portal-server:
     build: .
     working_dir: /usr/src/app  
     volumes:
@@ -9,7 +8,6 @@ services:
       - '3000:3000'
     depends_on:
       - portal-db
-      - server-portal-
     environment:
       - DATABASE_URL=mongodb://monty:pass@db:27017/mydb?authSource=admin&directConnection=true
 
@@ -22,6 +20,6 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: pass
   
   portal-network:
-    build: ../client-portal-
+    build: ../client-portal
     ports: 
       - '80:80'
